# cleanshot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/cleanshot/: constants.py  main.py  utils.py
src/cleanshot/config/: __init__.py  setup.py  types.py
src/cleanshot/core/: __init__.py  cleanshot.py  monitor.py  rename.py
src/cleanshot/llms/: inference_provider_base.py  llm.py  types.py
src/cleanshot/llms/openai/: provider.py  setup.py
src/cleanshot/ui/: __init__.py  menu.py
src/cleanshot/utils/: logging.py  utils.py
src/snapi/: constants.py  main.py  utils.py
src/snapi/config/: __init__.py  setup.py
src/snapi/core/: __init__.py  monitor.py  rename.py
src/snapi/llms/: inference_provider_base.py  llm.py  types.py
src/snapi/llms/openai/: provider.py  setup.py
src/snapi/ui/: menu.py
