[project]
name = "snapi"
version = "0.1.0"
description = "A tool to automatically rename screenshots using OpenAI's OCR"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "watchdog>=6.0.0",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
    "Pillow>=11.2.1",
    "questionary>=1.10.0",
    "rumps>=0.4.0",
]

[project.scripts]
snapi = "snapi.main:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["snapi*"]

[tool.ruff]
line-length = 120 

 